--- a/app/pages/post/post.component.html
+++ b/app/pages/post/post.component.html
@@ -1,10 +1,11 @@
-<ActivityIndicator busy={{isImageLoading}} height="50" width="50" color="#00eebc"></ActivityIndicator>
-<AbsoluteLayout width="100%" height="100%" class="transparent" *ngIf="!isImageLoading">
-  <StackLayout left="0" top="0" width="100%" height="100%" class="transparent">
-    <Image id="postImage" (tap)="goBack()"></Image>
+<AbsoluteLayout width="100%" height="100%" class="transparent">
+  <StackLayout left="0" top="0" width="100%" height="100%" class="transparent" *ngIf="!isImageLoading">
+    <Image id="postImage"></Image>
   </StackLayout>
-  <DockLayout left="0" top="0" width="100%" height="100%" class="transparent" stretchLastChild="false">
-    <Label *ngIf="displayCaption" dock="top" width="100%" height="auto" class="caption label-caption" [text]="_caption" (tap)="goBack()" textAlignment="center">
+  <DockLayout left="0" top="0" width="100%" height="100%" class="transparent" stretchLastChild="false" *ngIf="!isImageLoading" (tap)="goBack()">
+    <Label *ngIf="displayCaption" dock="top" width="100%" height="auto" class="caption label-caption" [text]="_caption" textAlignment="center">
     </Label>
   </DockLayout>
+  <ActivityIndicator busy={{isImageLoading}} height="50" width="50" color="#00eebc" left="{{(screenWidth / 2) - 25}}" top="{{(screenHeight /2 ) - 25}}">
+  </ActivityIndicator>
 </AbsoluteLayout>
