--- a/app/pages/settings/settings.component.html
+++ b/app/pages/settings/settings.component.html
@@ -5,7 +5,7 @@
   </ActionItem> 
 </ActionBar>
 <StackLayout class="lightGrayStack" horizontalAlignment="center">
-  <Image id="avatar" class="avatar" height="30%" (tap)="changeAvatar()"></Image>
+  <Image id="avatar" class="avatar" stretch="aspectFill" (tap)="changeAvatar()"></Image>
   <ScrollView orientation="vertical" height="70%">
     <StackLayout backgroundColor="#555555">
       <StackLayout class="lightGrayStack form-list-element element-margin">
