--- a/app/pages/home/home.component.html
+++ b/app/pages/home/home.component.html
@@ -2,24 +2,28 @@
   <NavigationButton text="Go Back"></NavigationButton>
 </ActionBar>
 
-<DockLayout style.backgroundColor="white" stretchLastChild="false" height="100%">
-  <ListView [items]="_posts" dock="top" height="90%">
-    <template let-item="item">
-      <DockLayout width="100%" height="80" class="item" (tap)="onPostSelect(item)" backgroundColor="#ffffff" stretchLastChild="false">
-        <StackLayout orientation="horizontal" width="65%" dock="left" class="stack">
-          <Image src="{{item.user.avatar}}" class="avatar"></Image>
-          <StackLayout class="stack">
-            <Label [text]="item.user.first_name" class="medium text"></Label>
-            <Label [text]="item.user.last_name" class="small text"></Label>
+<AbsoluteLayout width="100%" height="100%" class="transparent">
+  <DockLayout [visibility]="pageContent" style.backgroundColor="white" stretchLastChild="false" width="100%" height="100%" left="0" top="0">
+    <ListView id="list" [items]="_posts" dock="top" height="90%">
+      <template let-item="item">
+        <DockLayout width="100%" height="80" class="item" (tap)="onPostSelect(item)" backgroundColor="#ffffff" stretchLastChild="false">
+          <StackLayout orientation="horizontal" width="65%" dock="left" class="stack">
+            <Image src="{{item.user.avatar}}" class="avatar" stretch="aspectFill"></Image>
+            <StackLayout class="stack">
+              <Label [text]="item.user.first_name" class="medium text"></Label>
+              <Label [text]="item.user.last_name" class="small text"></Label>
+            </StackLayout>
           </StackLayout>
-        </StackLayout>
-        <StackLayout dock="right" width="35%" class="stack">
-          <Label text="{{item.created_at | date}}" class="small text"></Label>
-        </StackLayout>
-      </DockLayout>
-    </template>
-  </ListView>
-  <StackLayout dock="bottom" height="10%" orientation="horizontal" class="navigationBar">
-    <navigation-bar></navigation-bar>
-  </StackLayout>
-</DockLayout>
+          <StackLayout dock="right" width="35%" class="stack">
+            <Label text="{{item.created_at | date}}" class="small text"></Label>
+          </StackLayout>
+        </DockLayout>
+      </template>
+    </ListView>
+    <StackLayout dock="bottom" height="10%" orientation="horizontal" class="navigationBar">
+      <navigation-bar></navigation-bar>
+    </StackLayout>
+  </DockLayout>
+  <ActivityIndicator busy={{isDataLoading}} height="50" width="50" color="#00eebc" left="{{(screenWidth / 2) - 25}}" top="{{(screenHeight /2 ) - 25}}">
+  </ActivityIndicator>
+</AbsoluteLayout>
