--- a/app/pages/post/post.component.css
+++ b/app/pages/post/post.component.css
@@ -2,3 +2,12 @@
   padding-top: 10;
   padding-bottom: 10;
 }
+
+.post-icon{
+  margin-top: 25%;
+  height: 50%;
+}
+
+.bar{
+  background-color: rgba(34, 34, 34, 0.5);
+}
