--- a/app/pages/post/post.component.html
+++ b/app/pages/post/post.component.html
@@ -1,11 +1,23 @@
 <AbsoluteLayout width="100%" height="100%" class="transparent">
-  <StackLayout left="0" top="0" width="100%" height="100%" class="transparent" *ngIf="!isImageLoading">
+  <StackLayout left="0" top="0" width="100%" height="100%" class="transparent" visibility="{{ isImageLoading ? 'collapsed' : 'visible' }}">
     <Image id="postImage"></Image>
   </StackLayout>
-  <DockLayout left="0" top="0" width="100%" height="100%" class="transparent" stretchLastChild="false" *ngIf="!isImageLoading" (tap)="goBack()">
+  <DockLayout left="0" top="0" width="100%" height="100%" class="transparent" stretchLastChild="false" visibility="{{ isImageLoading ? 'collapsed' : 'visible' }}" (tap)="goBack()">
     <Label *ngIf="displayCaption" dock="top" width="100%" height="auto" class="caption label-caption" [text]="_caption" textAlignment="center">
     </Label>
+    <DockLayout dock="bottom" height="60" width="100%" class="bar" stretchLastChild="false">
+      <StackLayout dock="right" orientation="horizontal" height="100%" width="40%" class="transparent">
+        <StackLayout width="50%" height="100%" class="transparent" (tap)="takePicture()">
+          <Image src="res://reply" class="post-icon" horizontalAlignment="center"></Image>
+        </StackLayout>
+        <StackLayout width="50%" height="100%" class="transparent" (tap)="likePost()">
+          <Image src="res://hearte" id="likeImage" class="post-icon" horizontalAlignment="center"></Image>
+        </StackLayout>
+      </StackLayout>
+    </DockLayout>
   </DockLayout>
   <ActivityIndicator busy={{isImageLoading}} height="50" width="50" color="#00eebc" left="{{(screenWidth / 2) - 25}}" top="{{(screenHeight /2 ) - 25}}">
   </ActivityIndicator>
 </AbsoluteLayout>
+
+
