--- a/app/pages/landing/landing.component.html
+++ b/app/pages/landing/landing.component.html
@@ -9,5 +9,6 @@
   <Button text="My Friends" [nsRouterLink]="['/friend-list']" pageTransition="none"></Button>
   <Button text="Notifications" [nsRouterLink]="['/notifications']" pageTransition="none"></Button>
   <Button text="See map" [nsRouterLink]="['/google-map']" pageTransition="none"></Button>
+  <Button text="My Memories" [nsRouterLink]="['/memory-friend-selector']" pageTransition="none"></Button>
   <Button text="Log out" (tap)="logOut()"></Button>
 </StackLayout>
