--- a/app/pages/notifications/notifications.component.html
+++ b/app/pages/notifications/notifications.component.html
@@ -6,7 +6,7 @@
   <template let-item="item">
     <DockLayout width="100%" height="80" class="item" backgroundColor="#ffffff" stretchLastChild="false" (tap)="selectNotification(item)">
       <StackLayout orientation="horizontal" width="100%" dock="left" class="stack">
-        <Image src="{{item.user.avatar}}" class="avatar"></Image>
+        <Image src="{{item.user.avatar}}" class="avatar" stretch="aspectFill"></Image>
         <StackLayout class="stack">
           <Label text="{{item.user.first_name + ' ' + item.user.last_name}}" class="medium text"></Label>
           <Label [text]="item.notice_type" class="small text"></Label>
