implemented android launch page and behavior subject for location

--- a/app/pages/landing/landing.component.html
+++ b/app/pages/landing/landing.component.html
@@ -1,4 +1,4 @@
-<ActionBar title="GoPost">
+<ActionBar title="delite">
   <NavigationButton visibility="collapsed"></NavigationButton>
   <ActionItem (tap)="openSettings()" ios.position="right"
     text="Settings" android.position="actionBarIfRoom" icon="res://settings">
