--- a/app/pages/signup/pin.component.html
+++ b/app/pages/signup/pin.component.html
@@ -2,7 +2,7 @@
   <DockLayout backgroundColor="#222222" stretchLastChild="false" width="100%" height="100%" left="0" top="0">
     <StackLayout dock="top" height="60%" horizontalAlignment="center">
       <Image src="res://gopostlogonoglow" class="logoImage"></Image>
-      <Image src="res://goposttitle" class="titleImage"></Image>
+      <Image src="res://delitetitle" class="titleImage"></Image>
       <Label text="Join our community by using a frined's PIN" textAlignment="center" textWrap="true"></Label>
     </StackLayout>
 
