--- a/app/pages/welcome/welcome.component.html
+++ b/app/pages/welcome/welcome.component.html
@@ -1,7 +1,7 @@
 <DockLayout backgroundColor="#222222" stretchLastChild="false" height="100%">
   <StackLayout dock="top" height="60%" horizontalAlignment="center">
     <Image src="res://gopostlogonoglow" class="logoImage"></Image>
-    <Image src="res://goposttitle" class="titleImage"></Image>
+    <Image src="res://delitetitle" class="titleImage"></Image>
   </StackLayout>
 
   <StackLayout dock="bottom" height="40%">
