--- a/app/pages/login/login.component.html
+++ b/app/pages/login/login.component.html
@@ -2,7 +2,7 @@
   <DockLayout backgroundColor="#222222" stretchLastChild="false" width="100%" height="100%" left="0" top="0">
     <StackLayout dock="top" height="50%" horizontalAlignment="center">
       <Image src="res://gopostlogonoglow" class="logoImage"></Image>
-      <Image src="res://goposttitle" class="titleImage"></Image>
+      <Image src="res://delitetitle" class="titleImage"></Image>
     </StackLayout>
 
     <StackLayout dock="bottom" height="50%">
