implemented jwt's and put map to fixed position

--- a/app/pages/post-preview/post-preview.component.html
+++ b/app/pages/post-preview/post-preview.component.html
@@ -13,7 +13,7 @@
     <TextView visibility="{{ displayCaption ? 'visible' : 'collapsed' }}" dock="top" width="100%" id="textCaption" 
       height="auto" class="caption" secure="false" autocorrect="false" automationText="none">
     </TextView>
-    <StackLayout dock="bottom" height="80" width="100%" class="bar" orientation="horizontal" *ngIf="postDataToSend.postType !== 'reply'">
+    <StackLayout dock="bottom" height="80" width="100%" class="bar" orientation="horizontal" *ngIf="postToSend.newPost.post_type !== 'reply'">
       <StackLayout orientation="vertical" height="100%" width="{{postBarSectionWidth}}" (tap)="makePublicPost()" class="transparent">
         <Image src="res://publicp" class="post-icon" horizontalAlignment="center"></Image>
         <Label text="Public" textAlignment="center" textWrap="true" class="title"></Label> 
@@ -30,7 +30,7 @@
       </StackLayout>
     </StackLayout>
 
-    <StackLayout dock="bottom" height="80" width="100%" class="bar" orientation="horizontal" *ngIf="postDataToSend.postType === 'reply'">
+    <StackLayout dock="bottom" height="80" width="100%" class="bar" orientation="horizontal" *ngIf="postToSend.newPost.post_type === 'reply'">
       <StackLayout orientation="vertical" height="100%" width="100%" class="transparent">
         <Image src="res://reply" class="post-icon" horizontalAlignment="center" (tap)="makeReplyPost()"></Image>
         <Label text="Reply" textAlignment="center" textWrap="true" class="title" (tap)="makeReplyPost()"></Label> 
