--- a/app/pages/home/home.component.html
+++ b/app/pages/home/home.component.html
@@ -8,7 +8,7 @@
       <template let-item="item">
         <DockLayout width="100%" height="80" class="item" (tap)="onPostSelect(item)" backgroundColor="#ffffff" stretchLastChild="false">
           <StackLayout orientation="horizontal" width="65%" dock="left" class="stack">
-            <Image src="{{item.user.avatar}}" class="avatar" stretch="aspectFill"></Image>
+            <Image [src]="item.user.avatar" class="avatar" stretch="aspectFill"></Image>
             <StackLayout class="stack">
               <Label [text]="item.user.first_name" class="medium text"></Label>
               <Label [text]="item.user.last_name" class="small text"></Label>
