--- a/app/app.css
+++ b/app/app.css
@@ -67,3 +67,8 @@ ActionBar, .navigationBar{
 .transparent{
   background-color: rgba(255, 0, 0, 0.0);
 }
+
+@keyframes opacity {
+  from { opacity: 0; }
+  to { opacity: 1; }
+}
