--- a/app/pages/home/home.component.html
+++ b/app/pages/home/home.component.html
@@ -1,10 +1,10 @@
 <ActionBar title="Home">
-  <NavigationButton text="Go Back"></NavigationButton>
+  <NavigationButton visibility="collapsed"></NavigationButton>
 </ActionBar>
 
-<AbsoluteLayout width="100%" height="100%" class="transparent">
+<AbsoluteLayout width="100%" height="100%">
   <DockLayout [visibility]="pageContent" style.backgroundColor="white" stretchLastChild="false" width="100%" height="100%" left="0" top="0">
-    <ListView id="list" [items]="_posts" dock="top" height="90%">
+    <ListView id="list" [items]="_posts" dock="top" height="90%" width="100%">
       <template let-item="item">
         <DockLayout width="100%" height="80" class="item" (tap)="onPostSelect(item)" backgroundColor="#ffffff" stretchLastChild="false">
           <StackLayout orientation="horizontal" width="65%" dock="left" class="stack">
@@ -20,10 +20,13 @@
         </DockLayout>
       </template>
     </ListView>
-    <StackLayout dock="bottom" height="10%" orientation="horizontal" class="navigationBar">
-      <navigation-bar></navigation-bar>
+    <StackLayout dock="bottom" height="10%" width="100%" orientation="horizontal" class="navigationBar">
+      <navigation-bar (toggleTheMenu)="toogleMenu($event)"></navigation-bar>
     </StackLayout>
   </DockLayout>
+  <StackLayout height="90%" width="100%" left="0" top="0" class="transparent">
+    <floating-menu></floating-menu>
+  </StackLayout>
   <ActivityIndicator busy={{isDataLoading}} height="50" width="50" color="#00eebc" left="{{(screenWidth / 2) - 25}}" top="{{(screenHeight /2 ) - 25}}">
   </ActivityIndicator>
 </AbsoluteLayout>
