--- a/app/pages/notifications/notifications.component.html
+++ b/app/pages/notifications/notifications.component.html
@@ -1,17 +1,32 @@
 <ActionBar title="Notifications">
-  <NavigationButton text="Go Back" icon="res://back" (tap)="goBack()"></NavigationButton>
+  <NavigationButton visibility="collapsed"></NavigationButton>
 </ActionBar>
 
-<ListView [items]="_notifications">
-  <template let-item="item">
-    <DockLayout width="100%" height="80" class="item" backgroundColor="#ffffff" stretchLastChild="false" (tap)="selectNotification(item)">
-      <StackLayout orientation="horizontal" width="100%" dock="left" class="stack">
-        <Image src="{{item.user.avatar}}" class="avatar" stretch="aspectFill"></Image>
-        <StackLayout class="stack">
-          <Label text="{{item.user.first_name + ' ' + item.user.last_name}}" class="medium text"></Label>
-          <Label [text]="item.notice_type" class="small text"></Label>
-        </StackLayout>
-      </StackLayout>
-    </DockLayout>
-  </template>
-</ListView>
+<AbsoluteLayout width="100%" height="100%">
+  <DockLayout [visibility]="pageContent" style.backgroundColor="white" stretchLastChild="false"
+    width="100%" height="100%" left="0" top="0">
+    <ListView id="list" [items]="_notifications" dock="top" height="90%" width="100%">
+      <template let-item="item">
+        <DockLayout width="100%" height="80" class="item" backgroundColor="#ffffff"
+          stretchLastChild="false" (tap)="selectNotification(item)">
+          <StackLayout orientation="horizontal" width="100%" dock="left" class="stack">
+            <Image src="{{item.user.avatar}}" class="avatar" stretch="aspectFill"></Image>
+            <StackLayout class="stack">
+              <Label text="{{item.user.first_name + ' ' + item.user.last_name}}" class="medium text"></Label>
+              <Label [text]="item.notice_type" class="small text"></Label>
+            </StackLayout>
+          </StackLayout>
+        </DockLayout>
+      </template>
+    </ListView>
+    <StackLayout dock="bottom" height="10%" width="100%" orientation="horizontal" class="navigationBar">
+      <navigation-bar (toggleTheMenu)="toogleMenu($event)"></navigation-bar>
+    </StackLayout>
+  </DockLayout>
+  <StackLayout height="90%" width="100%" left="0" top="0" class="transparent">
+    <floating-menu></floating-menu>
+  </StackLayout>
+  <ActivityIndicator busy={{isDataLoading}} height="50" width="50" color="#00eebc"
+    left="{{(screenWidth / 2) - 25}}" top="{{(screenHeight /2 ) - 25}}">
+  </ActivityIndicator>
+</AbsoluteLayout>
