--- a/app/pages/home/home.component.html
+++ b/app/pages/home/home.component.html
@@ -8,10 +8,8 @@
       <template let-item="item">
         <DockLayout width="100%" height="80" class="item" (tap)="onPostSelect(item)" backgroundColor="#ffffff" stretchLastChild="false">
           <StackLayout orientation="horizontal" width="65%" dock="left" class="stack">
-            <StackLayout class="avatar">
-              <StackLayout class="circle-wrapper">
-                <Image [src]="item.user.avatar"></Image>
-              </StackLayout>
+            <StackLayout class="avatar transparent">
+              <Image [src]="item.user.avatar" class="circle-wrapper" stretch="aspectFill"></Image>
             </StackLayout>
             <StackLayout class="stack">
               <Label [text]="item.user.first_name" class="medium text"></Label>
