rxjs subject implemented for chats

--- a/app/components/floating-menu/floating-menu.component.html
+++ b/app/components/floating-menu/floating-menu.component.html
@@ -17,7 +17,7 @@
         <Label text="My Profile" verticalAlignment="center" class="menuText"></Label>
       </StackLayout>
       <StackLayout id="option4" class="menuOption" orientation="horizontal"
-        (tap)="toggleMenu('/chat/123')">
+        (tap)="toggleMenu('/chat/58f02fcac2382f7282811d94')">
         <Image src="res://visiblegray" class="menuIcon" verticalAlignment="center"></Image>
         <Label text="Chat" verticalAlignment="center" class="menuText"></Label>
       </StackLayout>
