--- a/app/pages/chat/chat.component.html
+++ b/app/pages/chat/chat.component.html
@@ -12,7 +12,7 @@
         </StackLayout>
       </StackLayout>
       <StackLayout dock="left" width="100%" height="auto" class="transparent">
-        <TextView id="textImput" (tap)="scrollToBottom(200)" [(ngModel)]="formModel.text" width="100%"
+        <TextView id="textImput" [(ngModel)]="formModel.text" width="100%"
           height="auto" hint="Type Something" class="input"></TextView>
       </StackLayout>
     </DockLayout>
@@ -25,7 +25,7 @@
       <StackLayout *ngFor="let message of chatData.messages" 
         [ngClass]="{'transparent element-container':true, 'element-left': currentUserId !== message.user_id, 'element-right': currentUserId === message.user_id}">
         <StackLayout [ngClass]="{'message-container':true, 'message-left': currentUserId !== message.user_id, 'message-right': currentUserId === message.user_id}">
-          <Label class="text" textWrap="true" [text]="message.text"> 
+          <Label class="text" textWrap="true" [text]="message.content"> 
           </Label>
         </StackLayout>
       </StackLayout>
